<?xml version="1.0" encoding="utf-8"?>
<resources>
        <string name="app_name">Stopwatch</string>
        <string name="timer">00:00:00</string>
        <string name="startText">start</string>
        <string name="resetText">reset</string>
        <string name="stopText">stop</string>
        <string name="backgroundText">Stopwatch</string>
        <string name="saveText">Record</string>
        <string name="standingsText">Placements</string>
        <string name="testing">No data recorded</string>
        <string name="returnText">Back</string>
        <string name="clearText">Clear</string>
</resources>

