<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

<ImageView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:src="@drawable/minpic1"
    android:scaleType="centerCrop"
    android:id="@+id/mino"
  />



    <TextView
        android:fontFamily="sans-serif-condensed"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="60sp"
        android:text="@string/timer"
        android:id="@+id/timer"
        android:textColor="#FFD700"


        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom|center"
        >


        <Button
            android:fontFamily="sans-serif-light"
            android:textStyle="italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startText"
            android:id="@+id/startButton"
            android:layout_gravity="center"
            android:onClick="startClick"
            android:background ="@drawable/buttoncolorchange"

            />

        <Button
            android:fontFamily="sans-serif-light"
            android:textStyle="italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stopText"
            android:id="@+id/stopButton"
            android:layout_gravity="center"
            android:onClick="stopClick"
            android:background ="@drawable/buttoncolorchange"
            />

        <Button
            android:fontFamily="sans-serif-light"
            android:textStyle="italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resetText"
            android:id="@+id/resetButton"
            android:layout_gravity="center"
            android:onClick="resetClick"
            android:background ="@drawable/buttoncolorchange"
            />
        <Button
            android:fontFamily="sans-serif-light"
            android:textStyle="italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saveText"
            android:id="@+id/saveButton"
            android:layout_gravity="center"
            android:onClick="saveClick"
            android:background ="@drawable/buttoncolorchange"
            />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom"
        >


        <Button
            android:fontFamily="sans-serif-light"
            android:textStyle="italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/standingsText"
            android:id="@+id/standButton"
            android:layout_gravity="center"
            android:onClick="standClick"
            android:background ="@drawable/buttoncolorchange"
            />






    </RelativeLayout>
</RelativeLayout>