<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/minpic1"
        android:scaleType="centerCrop"
        android:id="@+id/mino"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="top|center"
        android:id="@+id/addtimers"
        >

    <TextView

        android:fontFamily="sans-serif-condensed"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="60sp"
        android:text="@string/testing"
        android:id="@+id/testing"
        android:textColor="#FFD700"

        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom|left"
        >

    <Button
        android:fontFamily="sans-serif-light"
        android:textStyle="italic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/returnText"
        android:id="@+id/returnButton"
        android:layout_gravity="bottom|left"
        android:onClick="backClick"
        android:background ="@drawable/buttoncolorchange"
        />

        <Button
            android:fontFamily="sans-serif-light"
            android:textStyle="italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clearText"
            android:id="@+id/clearButton"
            android:layout_gravity="bottom|right"
            android:onClick="clearClick"
            android:background ="@drawable/buttoncolorchange"
            />

    </LinearLayout>

</RelativeLayout>